compiler/testData/diagnostics/tests/incompleteCode/emptyArguments.diag.txt
/emptyArguments.kt:26:14: error: no value passed for parameter 'z'
    asFunc(, 2)
             ^^
/emptyArguments.kt:47:19: error: no value passed for parameter 'c'
    asTypedFunc(, b,)
                  ^^^
/emptyArguments.kt:54:28: error: no value passed for parameter 'a'
    asTypedFunc(c = C(), , b = B())
                           ^^^^^^^^
/emptyArguments.kt:55:19: error: an argument is already passed for this parameter
    asTypedFunc(, a = A(), b,)
                  ^
/emptyArguments.kt:55:28: error: mixing named and positioned arguments is not allowed
    asTypedFunc(, a = A(), b,)
                           ^
/emptyArguments.kt:55:28: error: no value passed for parameter 'b'
    asTypedFunc(, a = A(), b,)
                           ^^^
/emptyArguments.kt:55:28: error: no value passed for parameter 'c'
    asTypedFunc(, a = A(), b,)
                           ^^^
/emptyArguments.kt:56:19: error: type mismatch: inferred type is A but B was expected
    asTypedFunc(, a, b = B(), c)
                  ^
/emptyArguments.kt:56:22: error: an argument is already passed for this parameter
    asTypedFunc(, a, b = B(), c)
                     ^
/emptyArguments.kt:56:31: error: mixing named and positioned arguments is not allowed
    asTypedFunc(, a, b = B(), c)
                              ^
/emptyArguments.kt:56:31: error: no value passed for parameter 'c'
    asTypedFunc(, a, b = B(), c)
                              ^^
/emptyArguments.kt:57:28: error: type mismatch: inferred type is A but C was expected
    asTypedFunc(, b = B(), a, c)
                           ^
/emptyArguments.kt:57:31: error: too many arguments for public fun asTypedFunc(a: A, b: B, c: C): Unit defined in root package in file emptyArguments.kt
    asTypedFunc(, b = B(), a, c)
                              ^
/emptyArguments.kt:62:19: error: an argument is already passed for this parameter
    asTypedFunc(, a = A(), b = B(), c = C())
                  ^
/emptyArguments.kt:63:19: error: an argument is already passed for this parameter
    asTypedFunc(, a = A(), b, c)
                  ^
/emptyArguments.kt:63:28: error: mixing named and positioned arguments is not allowed
    asTypedFunc(, a = A(), b, c)
                           ^
/emptyArguments.kt:63:31: error: mixing named and positioned arguments is not allowed
    asTypedFunc(, a = A(), b, c)
                              ^
/emptyArguments.kt:63:31: error: no value passed for parameter 'b'
    asTypedFunc(, a = A(), b, c)
                              ^^
/emptyArguments.kt:63:31: error: no value passed for parameter 'c'
    asTypedFunc(, a = A(), b, c)
                              ^^
/emptyArguments.kt:64:21: error: an argument is already passed for this parameter
    asTypedFunc(, , a = A())
                    ^
/emptyArguments.kt:64:21: error: no value passed for parameter 'c'
    asTypedFunc(, , a = A())
                    ^^^^^^^^

